# sqlalchemy-easy-softdelete

./: .bumpversion.cfg  .dockerignore  .env.docker  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  makefile  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  publish.yml  test.yml  test_matrix.yml
docs/: api.md  installation.md  usage.md
sqlalchemy_easy_softdelete/: __init__.py  hook.py  mixin.py
sqlalchemy_easy_softdelete/handler/: __init__.py  rewriter.py  sqlalchemy_easy_softdelete.py
sqlalchemy_easy_softdelete/handler/rewriter/: __init__.py
tests/: __init__.py  conftest.py  model.py  seed_data.py  test_queries.py  test_seed_data.py
tests/seed_data/: __init__.py  parent_child_childchild.py
tests/snapshots/: snap_test_queries.py  snap_test_seed_data.py
tests/utils/: __init__.py  simple_select_extractor.py
